# uagents-composio-adapter

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  coverage.xml  pyproject.toml
.github/workflows/: ci.yml
tests/: __init__.py  test_core.py
uagents_composio_adapter/: __init__.py  core.py
