[project]
name = "uagents-composio-adapter"
version = "1.0.2"
description = "Production-ready Composio integration module for uAgents framework with LangChain-based AI agents"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Tejus Gupta", email = "tejus3131@gmail.com" }
]
keywords = ["uagents", "composio", "langchain", "ai", "agents", "automation", "tools"]
classifiers = [


]
requires-python = ">=3.10"
dependencies = [
    "composio>=0.8.16",
    "composio-langchain>=0.8.14",
    "langchain-openai>=0.3.33",
    "uagents>=0.22.9",
    "pydantic>=2.0.0",
    "langgraph>=0.6.8",
    "langgraph-checkpoint-postgres>=2.0.24",
    "psycopg[pool]>=3.2.10",
    "langchain>=1.0.0a10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
]

[project.urls]
Homepage = "https://github.com/tejus3131/uagents-composio-adapter"
Repository = "https://github.com/tejus3131/uagents-composio-adapter"
Documentation = "https://github.com/tejus3131/uagents-composio-adapter#readme"
Issues = "https://github.com/tejus3131/uagents-composio-adapter/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["uagents_composio_adapter"]
include = [
    "uagents_composio_adapter/py.typed",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=uagents_composio_adapter",
    "--cov-report=html",
    "--cov-report=term-missing",
]
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312", "py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["uagents_composio_adapter"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "uagents.*",
    "composio.*",
    "langchain.*",
    "langgraph.*",
    "psycopg.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[dependency-groups]
dev = [
    "build>=1.3.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "python-dotenv>=1.1.1",
    "twine>=6.2.0",
]
